# Timur_steam

./: CMakeLists.txt  README.md  bild.bat  bild.sh  resources.qrc
data/: store_manifest.json
src/: AuthManager.cpp  AuthManager.h  GameManager.cpp  GameManager.h  MainWindow.cpp  MainWindow.h  main.cpp
src/models/: Game.h
